--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>SDA Kurs HTML</title>
         <meta charset="UTF-8">
-        <style>
+        <style type="text/css">
             .mojaklasa {
                 background-color: green;
             }
@@ -14,6 +14,21 @@
 
             img {
 
+            }
+
+            * img .mojaklasa #imieid
+
+
+            [data-hubert] {
+
+                }
+                                                                                                                                                                           }
+            #i {
+               background-color: red;
+            }
+
+            p + p {
+                background-color: yellow;
             }
 
             body > p {
@@ -39,7 +54,9 @@
             [title] {
 
             }
+
         </style>
+
     </head>
 
     <body>
@@ -93,7 +110,7 @@
                 <input type="password" name="haslo" tabindex="2">
             </div>
 
-            <textarea rows="3" cols="20">
+            <textarea rows="3" cols="20" wrap="hard" accesskey="g" >
             Test
             </textarea>
 
@@ -198,5 +215,6 @@
         <footer class="mojaklasa">
         To jest naglowek
         </footer>
+        <link rel="stylesheet" href="example.css" />
     </body>
 </html>
