--- a/css/index.html
+++ b/css/index.html
@@ -72,7 +72,11 @@
 <body>
     <div>
     <header>
-        My header
+         My header
+        <div style="width: 100px; float: left; ">LOGO</div>
+        <div style="float: right; ">zaloguj</div>
+        <div style="clear: both;"></div>
+        <div>zaloguj2</div>
     </header>
     <main>
         <p>
