--- a/css/index.html
+++ b/css/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Nasza firma Sp.j</title>
+
+
+    <script src="formlogic.js" type="application/javascript"></script>
+
     <style type="text/css">
 
         * {
@@ -18,6 +22,7 @@
             padding: 10px;
             background-color: yellow;
         }
+
 
         footer {
             height: 30px;
@@ -96,7 +101,7 @@
         </div>
 
         <div>
-            <input type="submit" value="zapisz na czarną" form="test">
+            <input type="button" id="submit1" value="zapisz na czarną" form="test">
         </div>
 
         <p>Poniższy formularz zapisze Ciebie na naszą białą listę. Przyłącz się a nie pożałujesz!</p>
@@ -121,5 +126,8 @@
         My footer
     </footer>
     </div>
+<script>
+    alert(2);
+</script>
     </body>
 </html>
