--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>SDA Kurs HTML</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="example.css">
         <style type="text/css">
             .mojaklasa {
                 background-color: green;
